--- a/README
+++ b/README
@@ -9,14 +9,29 @@ refer to this document.
 
 Not supported at this time:
 
-  * parameters from Auth header (needs some parsing).
+  * parameters from Auth header (needs some parsing) [5.4]
+
+  * Additional parameters in server response [6.1.2]. Trivial.
+
+  * Nonce checking [8, 9].
 
   * signatures different from HMAC-SHA1 (it's easy to use other
     digests and MACs via Ironclad but RSA needs to have padding
-    implemented).
+    implemented). [9.3]
+
+  * PLAINTEXT signature. Meh. [9.4]
 
 
 People who contributed in some way to this library:
 
   * Leslie P. Polzer <polzer@gnu.org>: base implementation.
+
+
+TODO (apart from spec things not implemented yet):
+
+  * incorporate test cases from http://wiki.oauth.net/TestCases
+
+  * abstract storage, can't get far with volatile memory
+
+  * better support for Consumers (examples, convenience interface)
 
