--- a/README
+++ b/README
@@ -13,14 +13,29 @@ yet.
 
 Not supported at this time:
 
+Service Provider:
+
   * parameters from Auth header (needs some parsing) [5.4]
     in principle a MUST, but as SP you get to decide ;)
 
   * Nonce checking [9], a SHOULD.
 
-  * signatures different from HMAC-SHA1 (it's easy to use other
-    digests and MACs via Ironclad but RSA needs to have padding
-    implemented). [9.3]
+  * Session extension
+      http://oauth.googlecode.com/svn/spec/ext/session/1.0/drafts/1/spec.html
+  
+  * Problem Reporting extension
+      http://oauth.pbworks.com/ProblemReporting
+
+Consumer:
+
+  * Auth parameters appear to be working, but Google rejects them
+    for some reason. Do more testing and debugging.
+
+Both:
+
+  * crypto signatures different from HMAC-SHA1. It's easy to use
+    other digests and MACs via Ironclad but RSA needs to have
+    padding implemented). [9.3]
 
   * PLAINTEXT signature. Meh. [9.4]
 
@@ -43,11 +58,5 @@ TODO (apart from spec things not implemented yet):
     we should support serving both 1.0 and 1.0a clients (and requesting
     stuff from 1.0 and 1.0a servers too, of course).
 
-
-  * better support for Consumers
-
-    * examples, convenience interface
-
-    * SIGNATURE-BASE-STRING must accept the list of parameters as argument
-      for the Consumer
+  * compare with the Hammer draft spec and resolve differences
 
