Update my email address.

--- a/README
+++ b/README
@@ -48,7 +48,7 @@ Both:
 
 People who contributed in a substantial way to this library:
 
-  * Leslie P. Polzer <polzer@gnu.org>: base implementation.
+  * Leslie P. Polzer <polzer@port-zero.com>: base implementation.
 
 See also revision log for minor contributions.
 
